--- a/TP FINAL.cbp
+++ b/TP FINAL.cbp
@@ -31,14 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="Estructuras.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="Estructuras.h" />
 		<Unit filename="clientes.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="clientes.h" />
+		<Unit filename="cuenta.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="cuenta.h" />
 		<Unit filename="domicilios.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -50,6 +50,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="mock.h" />
+		<Unit filename="movimientos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="movimientos.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
